# Test_for_Do

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: database.py  main.py
src/products/: models.py  router.py  schemas.py
src/templates/: base.html
src/wildberies/: models.py  router.py  shemas.py
